--- a/.github/workflows/publish_book.yml
+++ b/.github/workflows/publish_book.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         cd book
         jupyter-book build .
+        cp -R media _build/
         cd -
 
     - name: GitHub Pages action
