--- a/.github/workflows/publish_book.yml
+++ b/.github/workflows/publish_book.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         cd book
         jupyter-book build .
-        cp -R media _build/
+        cp -R media _build/html/
         cd -
 
     - name: GitHub Pages action
