--- a/book/_config.yml
+++ b/book/_config.yml
@@ -11,3 +11,5 @@ repository:
   branch                    : master  # Which branch of the repository should be used when creating links (optional)
 launch_buttons:
   thebe                  : true
+execute:
+  stderr_output: remove
