--- a/book/_config.yml
+++ b/book/_config.yml
@@ -5,6 +5,7 @@ html:
 sphinx:
   config:
     html_show_copyright: false
+    html_extra_path: ['assets']
 repository:
   url                       : https://github.com/rtavenar/exos_python  # Online location of your book
   path_to_book              : book  # Optional path to your book, relative to the repository root
