--- a/.github/workflows/publish_book.yml
+++ b/.github/workflows/publish_book.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+    - uses: r-lib/actions/setup-pandoc@v1
+      with:
+        pandoc-version: '2.13' # The pandoc version to download (if necessary) and use.
 
     # Install Python
     - name: Set up Python 3.8
